Add note about UniBBS and IPGateway discontinued

--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -18,6 +18,8 @@ description: "Shengbin's App - IPGateway"
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
+          <p>此应用已不再更新和维护。详情参见：</p>
+          <p><a href="http://blog.shengbin.me/posts/ipgateway-discontinued">http://blog.shengbin.me/posts/ipgateway-discontinued</a></p>
           <h2>IPGateway（IP网关）</h2>
 		  <p>IPGateway is a simple but useful app for logging in/out of the IP gateway of Peking University. Choose the version you need.（IPGateway是一个简单实用的小软件，可以用它方便地登录北京大学的IP网关。从下面选取适合你的版本。）</p>
 		  
