--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -18,14 +18,16 @@ description: "Shengbin's App - UniBBS"
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h2>北大未名 Lite</h2>
-		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端 （Lite版本只能潜水）。</p>
-		  <p>可在App Store免费下载：</p>
-		  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767">https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767</a></p>
-		  <h2>北大未名</h2>
-		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端。具备看帖、发帖、回帖、站内信、收藏等各种功能。界面简洁精美。</p>
+          <h2>北大未名</h2>
+		  <p>访问<a href="http://bbs.pku.edu.cn">北大未名BBS</a>的iOS客户端。具备看帖、发帖、回帖等各种功能，界面简洁精美。</p>
 		  <p>可在App Store免费下载：</p>
 		  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093">https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093</a></p>
+		  <h2>北大未名 Lite</h2>
+		  <p>Lite版本已不再更新和维护。详情参见：</p>
+          <p><a href="http://blog.shengbin.me/posts/bei-da-wei-ming-lite-discontinued">http://blog.shengbin.me/posts/bei-da-wei-ming-lite-discontinued</a></p>
+		  <p>访问<a href="http://bbs.pku.edu.cn">北大未名BBS</a>的iOS客户端 （Lite版本只能潜水）。</p>
+		  <p>可在App Store免费下载：</p>
+		  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767">https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767</a></p>
 		  <h2>联系开发者</h2>
 		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></p>
 		  
