Change some English text to Chinese

--- a/apps/baidu-it-for-you/index.html
+++ b/apps/baidu-it-for-you/index.html
@@ -53,7 +53,7 @@
 <br>
 <br>
 	<div id="about_this">
-	  <p><small>Inspired by, and some code copied from, <a href="http://lmgtfy.com/">lmgtfy.com</a>. The logo belongs to Baidu. | <a href="" onclick="alert('这个页面用于教导那些不知道自己使用搜索引擎解决简单问题（例如美国的首都是哪里）的家伙。');">About</a></small></p>
+	  <p><small>灵感及部分代码源自 <a href="http://lmgtfy.com/">lmgtfy.com</a> 网站。图标版权属于百度公司。| <a href="" onclick="alert('这个页面用于教导那些不知道自己使用搜索引擎解决简单问题（例如美国的首都是哪里）的家伙。');">关于此页面</a></small></p>
 	  <p><small>&copy;<script language="javascript">document.write(new Date().getFullYear());</script> Shengbin Meng</small></p>
 	</div>
 	<img id="fake_mouse" src="./assets/mouse-arrow.png" style="display: none">
