--- a/index.html
+++ b/index.html
@@ -106,17 +106,20 @@ description: "Shengbin's Home Page, providing links to other information about h
 	</table>
 </div>
 
-<!-- Duoshuo Comment BEGIN -->
-<div class="ds-thread" data-thread-key="shengbin-home" data-title="Shengbin Meng - 孟胜彬" data-url="http://www.shengbin.me/"></div>
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"shengbin"};
-(function() {
-    var ds = document.createElement('script');
-    ds.type = 'text/javascript';ds.async = true;
-    ds.src = 'http://static.duoshuo.com/embed.js';
-    ds.charset = 'UTF-8';
-    (document.getElementsByTagName('head')[0] 
-    || document.getElementsByTagName('body')[0]).appendChild(ds);
-})();
-</script>
-<!-- Duoshuo Comment END -->
+<br>
+
+<script data-isso="//droplet.shengbin.me/isso-comments"
+        data-isso-css="true"
+        data-isso-lang="zh"
+        data-isso-reply-to-self="true"
+        data-isso-require-author="false"
+        data-isso-require-email="false"
+        data-isso-max-comments-top="5"
+        data-isso-max-comments-nested="5"
+        data-isso-reveal-on-click="5"
+        data-isso-avatar="false"
+        data-isso-vote="true"
+        data-vote-levels=""
+        src="//droplet.shengbin.me/isso-comments/js/embed.dev.js"></script>
+
+<section id="isso-thread"></section>
