Let newest comments show on top

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ description: "Shengbin's Home Page, providing links to other information about h
         data-isso-max-comments-top="5"
         data-isso-max-comments-nested="5"
         data-isso-reveal-on-click="5"
+        data-isso-sorting="newest"
         data-isso-avatar="false"
         data-isso-vote="true"
         data-vote-levels=""
