--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ description: "Shengbin's Home Page, providing links to other information about h
         data-isso-reply-to-self="true"
         data-isso-require-author="false"
         data-isso-require-email="false"
-        data-isso-max-comments-top="5"
+        data-isso-max-comments-top="inf"
         data-isso-max-comments-nested="5"
         data-isso-reveal-on-click="5"
         data-isso-sorting="newest"
