--- a/index.html
+++ b/index.html
@@ -24,18 +24,14 @@ description: "Shengbin's Home Page, providing links to other information about h
 	<tr>
         <td>
             <h2>Apps/Coding</h2>
-            <p>I used <a href="http://www.sinacloud.com/sae.html">SAE</a> even in its alpha version, when I took training in <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web pages/sites. I developed iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/index.html">ICST of PKU</a>. I have been writing codes in different languages, for various reasons. Next are some results of my coding:</p>
+            <p>I have been writing code in different languages, for various reasons. Next are some results of my coding:</p>
             <p><a href="./apps">Shengbin's Small Apps<a/></p>
-            <p><a href="https://bitbucket.org/shengbinmeng">Shengbin's Bitbucket</a></p>
             <p><a href="https://github.com/shengbinmeng">Shengbin's GitHub</a></p>
         </td>
         <td>
             <h2>应用/代码</h2>
-            <p>我曾在首届<a href="http://college.sina.com">新浪网络学院</a>的培训中学习PHP，并作为第一批试用者接触了<a href="http://www.sinacloud.com/sae.html">新浪SAE</a>。
-            由此我开始写一些简单的网页应用，或是搭建网站。进入<a href="http://www.icst.pku.edu.cn/vip/index.html">北京大学计算机科学技术研究所</a>之后，
-            我学习了iOS和Android开发，并编写和发布了几个移动应用。此外，我也因为各种原因写其他代码。从以下的链接可以看到我写过的一些应用或开源代码:</p>
+            <p>我会因为各种原因写各种代码。从以下的链接可以看到我发布过的一些应用或开源代码:</p>
             <p><a href="./apps">我的小应用<a/></p>
-            <p><a href="https://bitbucket.org/shengbinmeng">我的Bitbucket代码库</a></p>
             <p><a href="https://github.com/shengbinmeng">我的GitHub代码库</a></p>
         </td>	
     </tr>
