Replace Renren with Zhihu in social section of home page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ description: "Shengbin's Home Page, providing links to other information about h
             <p>I spend only a little time on social networks. However, that doesn't stop me trying all kinds of them. 
             You can find me in the following places: </p>
             <p><a href="http://weibo.com/msb91">Weibo</a></p>
-            <p><a href="http://www.renren.com/shengbinmeng">Renren</a> (login required)</p>
+            <p><a href="https://www.zhihu.com/people/msb91">Zhihu</a></p>
             <p><a href="https://movie.douban.com/people/msb91/">Douban</a></p>
             <p><a href="https://twitter.com/shengbinmeng">Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbinmeng">Facebook</a></p>
@@ -74,7 +74,7 @@ description: "Shengbin's Home Page, providing links to other information about h
             <h2>社交网站</h2>
             <p>其实我不怎么使用社交网站。但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
             <p><a href="http://weibo.com/msb91">梦圣@微博</a></p>
-            <p><a href="http://www.renren.com/shengbinmeng">孟胜彬@人人网</a>（需要登录）</p>
+            <p><a href="https://www.zhihu.com/people/msb91">孟先生@知乎</a></p>
             <p><a href="https://movie.douban.com/people/msb91/">孟先生@豆瓣</a></p>
             <p><a href="https://twitter.com/shengbinmeng">Shengbin Meng@Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbinmeng">Shengbin Meng@Facebook</a></p>
