--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ description: "Shengbin's Home Page, providing links to other information about h
 	<tr>
         <td>
             <h2>Blog</h2>
-            <p>When I was young (pursuing my Bachelor of Engineering degree in <a href="http://www.tsinghua.edu.cn">Tsinghua University</a>),
+            <p>When I was young (pursuing my Bachelor of Engineering degree in Tsinghua University),
             I wrote about my days and thoughts. Currently, I still keep the habit of writing. You are welcome to read what I write on <a href="http://blog.shengbin.me">my blog</a>.</p>
         </td>
         <td>
             <h2>博客</h2>
-            <p>在<a href="http://www.tsinghua.edu.cn">清华园</a>的时候，我用文字记录青春岁月中的经历或想法。青春远去了，但写过的东西，连同写作的习惯都存留了下来。
+            <p>在清华园的时候，我用文字记录青春岁月中的经历或想法。青春远去了，但写过的东西，连同写作的习惯都存留了下来。
             如果你想了解我在学术、技术和生活等方面的情况，欢迎阅读<a href="http://blog.shengbin.me">我的博客</a>。</p>
         </td>
 	</tr>
