--- a/index.html
+++ b/index.html
@@ -85,18 +85,14 @@ description: "Shengbin's Home Page, providing links to other information about h
         <td>
             <h2>Contact</h2>
             <p>You may already know how to reach me. If not, here are some possible ways:</p>
-            <ul>
-            <li>Email: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></li>
-            <li>QQ: 815237522</li>
-            </ul>
+            <p>Email: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></p>
+            <p>QQ: 815237522</p>
         </td>
         <td>
             <h2>联系我</h2>
             <p>如果访问了上面链接的内容，你应该已经能够联系到我了。这里再给出两种时效性更好的联系方式：</p>
-            <ul>
-            <li>Email: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></li>
-            <li>QQ: 815237522</li>
-            </ul>
+            <p>Email: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></p>
+            <p>QQ: 815237522</p>
         </td>
 	</tr>
 	</table>
