Rephrase donation to payment

--- a/pay/index.html
+++ b/pay/index.html
@@ -1,11 +1,10 @@
 ---
-title: "Donate - 捐赠"
+title: "Pay - 付款"
 ---
 
-<h1>捐赠/Donate</h1>
-<p>我创建和维护几个开源<a href="/apps" target="_blank">应用</a>，并保持更新个人<a href="http://blog.shengbin.me" target="_blank">博客</a>。如果你觉得我的代码或文字对你有用，欢迎向我捐赠。</p>
+<h1>向我付款 / Pay me</h1>
 
-<h2>用手机支付宝钱包扫描下面的二维码进行付款（数量随意，记得备注付款说明）：</h2>
+<h2>用手机支付宝钱包扫描下面的二维码进行付款，多多益善。不管你是一时兴起还是欠债还钱，记得备注付款说明哦！</h2>
 <img src="./alipay.png" width="512px" height="512px" style="margin:auto;display:block;">
 
 <br />
@@ -14,7 +13,7 @@ title: "Donate - 捐赠"
 <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_xclick">
 <input type="hidden" name="business" value="shengbinmeng@gmail.com">
-<input type="hidden" name="item_name" value="Donation for valuable app and/or blog of Shengbin Meng">
+<input type="hidden" name="item_name" value="Pay Shengbin Meng for whatever reason.">
 <input type="hidden" name="charset" value="utf-8">
 <input type="hidden" name="currency_code" value="USD">
 <!-- <input type="hidden" name="amount" value="5.00"> -->
