--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -4,44 +4,34 @@ title: "UniBBS"
 description: "Shengbin's App - UniBBS"
 ---
 
-  <div class="wrapper">
-    <h1 class="title">UniBBS</h1>
-    <div id="container">
-      <p class="tagline">For accessing BBS of several universities.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/shengbinmeng" class="code" target="_blank">Source Code（源码）</a>
-		  <a href="http://www.shengbin.me/donate" class="download-button" target="_blank"><span>Donate（捐赠）</span></a>
-        </div>
-		
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h2>北大未名</h2>
-		  <p>访问<a href="http://bbs.pku.edu.cn">北大未名BBS</a>的iOS客户端。具备看帖、发帖、回帖等各种功能，界面简洁精美。</p>
-		  <p>可在App Store免费下载：</p>
-		  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093">https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093</a></p>
-		  <h2>北大未名 Lite</h2>
-		  <p>Lite版本已不再更新和维护。详情参见：</p>
-          <p><a href="http://blog.shengbin.me/posts/bei-da-wei-ming-lite-discontinued">http://blog.shengbin.me/posts/bei-da-wei-ming-lite-discontinued</a></p>
-		  <p>访问<a href="http://bbs.pku.edu.cn">北大未名BBS</a>的iOS客户端 （Lite版本只能潜水）。</p>
-		  <p>可在App Store免费下载：</p>
-		  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767">https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767</a></p>
-		  <h2>联系开发者</h2>
-		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></p>
-		  
-		  <hr>
-		  <h1>Donate</h1>
-		  <a name="donate"></a>
-			<p>The app itself is free, but if it makes your life better and, by giving away a little money, you want to make mine better too, please donate via the following link. Don't forget to leave a note. And thank you for whatever amount of the money. （该应用本身是免费的，但如果你觉得好用，不妨通过捐赠来支持开发者。点击下面的链接进行付款。无论多少，都非常感谢！）</p>
-			<p><a href="http://www.shengbin.me/donate">http://www.shengbin.me/donate</a></p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="http://www.shengbin.me" class="avatar"><img src="http://www.shengbin.me/shengbin.png" width="48" height="48"/></a> <a href="http://www.shengbin.me">Shengbin Meng</a> maintains all of this. You can <a href="http://www.shengbin.me/donate">buy him a cup of coffee.</a></p>
-      </div>
-    </footer>
+<h1 class="title">UniBBS</h1>
+<div id="container">
+  <p class="tagline">For accessing BBS of several universities.</p>
+  <div id="main" role="main">
+	<div class="download-bar">
+	<div class="inner">
+	  <a href="https://github.com/shengbinmeng" class="code" target="_blank">Source Code（源码）</a>
+	  <a href="/pay" class="download-button" target="_blank"><span>Pay（付款）</span></a>
+	</div>
+	
+	<span class="blc"></span><span class="trc"></span>
+	</div>
+	<article class="markdown-body">
+	  <h2>北大未名</h2>
+	  <p>访问<a href="http://bbs.pku.edu.cn">北大未名BBS</a>的iOS客户端。具备看帖、发帖、回帖等各种功能，界面简洁精美。</p>
+	  <p>可在App Store免费下载：</p>
+	  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093">https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093</a></p>
+	  <h2>北大未名 Lite</h2>
+	  <p>Lite版本已不再更新和维护。详情参见：</p>
+	  <p><a href="http://blog.shengbin.me/posts/bei-da-wei-ming-lite-discontinued">http://blog.shengbin.me/posts/bei-da-wei-ming-lite-discontinued</a></p>
+	  <p>访问<a href="http://bbs.pku.edu.cn">北大未名BBS</a>的iOS客户端 （Lite版本只能潜水）。</p>
+	  <p>可在App Store免费下载：</p>
+	  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767">https://itunes.apple.com/cn/app/bei-da-wei-ming-lite/id509910767</a></p>
+	  <h2>联系开发者</h2>
+	  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></p>
+	  
+	  <h2>Pay</h2>
+	  <p>The app itself is free, but if it makes your life better and you really want to pay me, I can NOT stop you. （该应用本身是免费的，但如果你觉得好用，非要向开发者付款，请点击下面的链接！）</p>
+	</article>
   </div>
+</div>
