--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ description: "Shengbin's Home Page, providing links to other information about h
         <td>
             <h2>社交网站</h2>
             <p>我并非网络社交达人，但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
-            <p><a href="http://weibo.com/msb91">梦圣@微博</a></p>
+            <p><a href="http://weibo.com/msb91">亲爱的孟先生@微博</a></p>
             <p><a href="https://www.zhihu.com/people/msb91">孟先生@知乎</a></p>
             <p><a href="https://movie.douban.com/people/msb91/">孟先生@豆瓣</a></p>
             <p><a href="https://twitter.com/shengbinmeng">Shengbin Meng@Twitter</a></p>
