Replace link of Google+ with Medium
Because Google+ is shutdown.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ description: "Shengbin's Home Page, providing links to other information about h
             <p><a href="https://movie.douban.com/people/msb91/">Douban</a></p>
             <p><a href="https://twitter.com/shengbinmeng">Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbinmeng">Facebook</a></p>
-            <p><a href="https://plus.google.com/+shengbinmeng">Google+</a></p>
+            <p><a href="https://medium.com/@shengbinmeng">Medium</a></p>
         </td>
         <td>
             <h2>社交网站</h2>
@@ -78,7 +78,7 @@ description: "Shengbin's Home Page, providing links to other information about h
             <p><a href="https://movie.douban.com/people/msb91/">孟先生@豆瓣</a></p>
             <p><a href="https://twitter.com/shengbinmeng">Shengbin Meng@Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbinmeng">Shengbin Meng@Facebook</a></p>
-            <p><a href="https://plus.google.com/+shengbinmeng">Shengbin Meng@Google+</a></p>
+            <p><a href="https://medium.com/@shengbinmeng">Shengbin Meng@Medium</a></p>
         </td>
 	</tr>
 	<tr>
