--- a/index.html
+++ b/index.html
@@ -24,15 +24,11 @@ description: "Shengbin's Home Page, providing links to other information about h
 	<tr>
         <td>
             <h2>Apps/Coding</h2>
-            <p>I have been writing code in different languages, for various reasons. Next are some results of my coding:</p>
-            <p><a href="./apps">Shengbin's Small Apps<a/></p>
-            <p><a href="https://github.com/shengbinmeng">Shengbin's GitHub</a></p>
+            <p>I have been writing code in different languages, for various reasons. See some of my coding here: <a href="https://github.com/shengbinmeng">Shengbin's GitHub</a>.</p>
         </td>
         <td>
             <h2>应用/代码</h2>
-            <p>我会因为各种原因写各种代码。从以下的链接可以看到我发布过的一些应用或开源代码:</p>
-            <p><a href="./apps">我的小应用<a/></p>
-            <p><a href="https://github.com/shengbinmeng">我的GitHub代码库</a></p>
+            <p>我会因为各种原因写各种代码。从以下的链接可以看到我发布过的一些应用或开源代码: <a href="https://github.com/shengbinmeng">我的GitHub代码库</a>。</p>
         </td>	
     </tr>
     <tr>
